--- a/carbon_mineralization/carbon_mineralization.in
+++ b/carbon_mineralization/carbon_mineralization.in
@@ -1,4 +1,4 @@
-#Description: 1D transport with redox chemistry based on electron tower
+#Description: Batch organic carbon mineralization by O2(aq), NO3- and NO2-
 
 SIMULATION
   SIMULATION_TYPE SUBSURFACE
@@ -16,22 +16,22 @@ CHEMISTRY
   EXTERNAL_FILE chemistry_block_other.txt
   MICROBIAL_REACTION
     EXTERNAL_FILE o2_consumption.txt
-#    EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
-#    EXTERNAL_FILE inhibition_by_lack_of_o2.txt
+    EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
+    EXTERNAL_FILE inhibition_by_lack_of_o2.txt
   /
   
   MICROBIAL_REACTION
     EXTERNAL_FILE no3_consumption.txt
     EXTERNAL_FILE inhibition_by_o2.txt
-#    EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
-#    EXTERNAL_FILE inhibition_by_lack_of_no3.txt
+    EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
+    EXTERNAL_FILE inhibition_by_lack_of_no3.txt
   /
   
   MICROBIAL_REACTION
     EXTERNAL_FILE no2_consumption.txt
     EXTERNAL_FILE inhibition_by_no3.txt
-#    EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
-#    EXTERNAL_FILE inhibition_by_lack_of_no2.txt
+    EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
+    EXTERNAL_FILE inhibition_by_lack_of_no2.txt
   /
 END
 
