--- a/carbon_mineralization/inhibit_by_all_long.in
+++ b/carbon_mineralization/inhibit_by_all_long.in
@@ -22,12 +22,14 @@ CHEMISTRY
   
   MICROBIAL_REACTION
     EXTERNAL_FILE no3_consumption.txt
+    EXTERNAL_FILE inhibition_by_o2.txt
     EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
     EXTERNAL_FILE inhibition_by_lack_of_no3.txt
   /
   
   MICROBIAL_REACTION
     EXTERNAL_FILE no2_consumption.txt
+    EXTERNAL_FILE inhibition_by_no3.txt
     EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
     EXTERNAL_FILE inhibition_by_lack_of_no2.txt
   /
@@ -35,7 +37,7 @@ END
 
 #=========================== times ============================================
 TIME
-  FINAL_TIME 10.d0 d
+  FINAL_TIME 180.d0 d
   INITIAL_TIMESTEP_SIZE 1.d0 h
   MAXIMUM_TIMESTEP_SIZE 5.d-2 d
 END
