--- a/carbon_mineralization/no_inhibition.in
+++ b/carbon_mineralization/no_inhibition.in
@@ -27,6 +27,13 @@ CHEMISTRY
   /
 END
 
+#=========================== times ============================================
+TIME
+  FINAL_TIME 10.d0 d
+  INITIAL_TIMESTEP_SIZE 1.d0 h
+  MAXIMUM_TIMESTEP_SIZE 5.d-2 d
+END
+
 EXTERNAL_FILE subsurface_block_other.txt
 
 END_SUBSURFACE
