--- a/carbon_mineralization/no_inhibition_long.in
+++ b/carbon_mineralization/no_inhibition_long.in
@@ -29,8 +29,11 @@ END
 
 EXTERNAL_FILE subsurface_block_other.txt
 
+#=========================== times ============================================
 TIME
-  FINAL_TIME 180. d
+  FINAL_TIME 180.d0 d
+  INITIAL_TIMESTEP_SIZE 1.d0 h
+  MAXIMUM_TIMESTEP_SIZE 5.d-2 d
 END
 
 END_SUBSURFACE
