moved files into separate directories

--- a/carbon_mineralization/inhibit_by_potential/inhibit_by_potential.in
+++ b/carbon_mineralization/inhibit_by_potential/inhibit_by_potential.in
@@ -13,19 +13,19 @@ SUBSURFACE
 
 #=========================== chemistry ========================================
 CHEMISTRY
-  EXTERNAL_FILE chemistry_block_other.txt
+  EXTERNAL_FILE ../chemistry_block_other.txt
   MICROBIAL_REACTION
-    EXTERNAL_FILE o2_consumption.txt
+    EXTERNAL_FILE ../o2_consumption.txt
   /
   
   MICROBIAL_REACTION
-    EXTERNAL_FILE no3_consumption.txt
-    EXTERNAL_FILE inhibition_by_o2.txt
+    EXTERNAL_FILE ../no3_consumption.txt
+    EXTERNAL_FILE ../inhibition_by_o2.txt
   /
   
   MICROBIAL_REACTION
-    EXTERNAL_FILE no2_consumption.txt
-    EXTERNAL_FILE inhibition_by_no3.txt
+    EXTERNAL_FILE ../no2_consumption.txt
+    EXTERNAL_FILE ../inhibition_by_no3.txt
   /
 END
 
@@ -36,6 +36,6 @@ TIME
   MAXIMUM_TIMESTEP_SIZE 5.d-2 d
 END
 
-EXTERNAL_FILE subsurface_block_other.txt
+EXTERNAL_FILE ../subsurface_block_other.txt
 
 END_SUBSURFACE
