--- a/carbon_mineralization/inhibit_by_reactants/inhibit_by_reactants.in
+++ b/carbon_mineralization/inhibit_by_reactants/inhibit_by_reactants.in
@@ -13,23 +13,23 @@ SUBSURFACE
 
 #=========================== chemistry ========================================
 CHEMISTRY
-  EXTERNAL_FILE chemistry_block_other.txt
+  EXTERNAL_FILE ../chemistry_block_other.txt
   MICROBIAL_REACTION
-    EXTERNAL_FILE o2_consumption.txt
-    EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
-    EXTERNAL_FILE inhibition_by_lack_of_o2.txt
+    EXTERNAL_FILE ../o2_consumption.txt
+    EXTERNAL_FILE ../inhibition_by_lack_of_ch2o.txt
+    EXTERNAL_FILE ../inhibition_by_lack_of_o2.txt
   /
   
   MICROBIAL_REACTION
-    EXTERNAL_FILE no3_consumption.txt
-    EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
-    EXTERNAL_FILE inhibition_by_lack_of_no3.txt
+    EXTERNAL_FILE ../no3_consumption.txt
+    EXTERNAL_FILE ../inhibition_by_lack_of_ch2o.txt
+    EXTERNAL_FILE ../inhibition_by_lack_of_no3.txt
   /
   
   MICROBIAL_REACTION
-    EXTERNAL_FILE no2_consumption.txt
-    EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
-    EXTERNAL_FILE inhibition_by_lack_of_no2.txt
+    EXTERNAL_FILE ../no2_consumption.txt
+    EXTERNAL_FILE ../inhibition_by_lack_of_ch2o.txt
+    EXTERNAL_FILE ../inhibition_by_lack_of_no2.txt
   /
 END
 
@@ -40,6 +40,6 @@ TIME
   MAXIMUM_TIMESTEP_SIZE 5.d-2 d
 END
 
-EXTERNAL_FILE subsurface_block_other.txt
+EXTERNAL_FILE ../subsurface_block_other.txt
 
 END_SUBSURFACE
