--- a/carbon_mineralization/no_inhibition_long/no_inhibition_long.in
+++ b/carbon_mineralization/no_inhibition_long/no_inhibition_long.in
@@ -13,27 +13,21 @@ SUBSURFACE
 
 #=========================== chemistry ========================================
 CHEMISTRY
-  EXTERNAL_FILE chemistry_block_other.txt
+  EXTERNAL_FILE ../chemistry_block_other.txt
   MICROBIAL_REACTION
-    EXTERNAL_FILE o2_consumption.txt
-    EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
-    EXTERNAL_FILE inhibition_by_lack_of_o2.txt
+    EXTERNAL_FILE ../o2_consumption.txt
   /
   
   MICROBIAL_REACTION
-    EXTERNAL_FILE no3_consumption.txt
-    EXTERNAL_FILE inhibition_by_o2.txt
-    EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
-    EXTERNAL_FILE inhibition_by_lack_of_no3.txt
+    EXTERNAL_FILE ../no3_consumption.txt
   /
   
   MICROBIAL_REACTION
-    EXTERNAL_FILE no2_consumption.txt
-    EXTERNAL_FILE inhibition_by_no3.txt
-    EXTERNAL_FILE inhibition_by_lack_of_ch2o.txt
-    EXTERNAL_FILE inhibition_by_lack_of_no2.txt
+    EXTERNAL_FILE ../no2_consumption.txt
   /
 END
+
+EXTERNAL_FILE ../subsurface_block_other.txt
 
 #=========================== times ============================================
 TIME
@@ -41,7 +35,5 @@ TIME
   INITIAL_TIMESTEP_SIZE 1.d0 h
   MAXIMUM_TIMESTEP_SIZE 5.d-2 d
 END
-
-EXTERNAL_FILE subsurface_block_other.txt
 
 END_SUBSURFACE
