--- a/ats-1d/carbon_mineralization.in
+++ b/ats-1d/carbon_mineralization.in
@@ -1,34 +1,105 @@
 CHEMISTRY
-PRIMARY_SPECIES
-  Tracer1
-
-/
-
-
-SORPTION
-  ISOTHERM_REACTIONS
-    Tracer1
-     TYPE LINEAR
-     DISTRIBUTION_COEFFICIENT 100
-     /
-   
-   /
+  PRIMARY_SPECIES
+    O2(aq)
+    NO3-
+    NO2-
+    N2(aq)
+    CH2O(aq)
+    CO2(aq)
   /
-
-
-
-LOG_FORMULATION
-DATABASE hanford.dat
-END
-CONSTRAINT upstreambc
-  CONCENTRATIONS
-    Tracer1 1.0  T
-
+  MICROBIAL_REACTION
+    REACTION CH2O(aq) + O2(aq) <-> CO2(aq) + H2O
+    RATE_CONSTANT 1.d-10
+    MONOD
+      SPECIES_NAME O2(aq)
+      HALF_SATURATION_CONSTANT 1.d-5
+    /
+    MONOD
+      SPECIES_NAME CH2O(aq)
+      HALF_SATURATION_CONSTANT 1.d-5
+    /
+    INHIBITION
+      SPECIES_NAME CH2O(aq)
+      TYPE THRESHOLD 1.d15
+      INHIBITION_CONSTANT 1.d-10
+    /
+    INHIBITION
+      SPECIES_NAME O2(aq)
+      TYPE THRESHOLD 1.d15
+      INHIBITION_CONSTANT 1.d-10
+    /
+  /
+  MICROBIAL_REACTION
+    REACTION CH2O(aq) + 2 NO3- <-> 2 NO2- + CO2(aq) + H2O
+    RATE_CONSTANT 2.d-11
+    MONOD
+      SPECIES_NAME NO3-
+      HALF_SATURATION_CONSTANT 1.d-5
+    /
+    MONOD
+      SPECIES_NAME CH2O(aq)
+      HALF_SATURATION_CONSTANT 1.d-5
+    /
+    INHIBITION
+      SPECIES_NAME O2(aq)
+      TYPE THRESHOLD 1.d8
+      INHIBITION_CONSTANT -1.d-7
+    /
+    INHIBITION
+      SPECIES_NAME CH2O(aq)
+      TYPE THRESHOLD 1.d15
+      INHIBITION_CONSTANT 1.d-10
+    /
+    INHIBITION
+      SPECIES_NAME NO3-
+      TYPE THRESHOLD 1.d15
+      INHIBITION_CONSTANT 1.d-10
+    /
+  /
+  MICROBIAL_REACTION
+    # neglect the 4/3 H+ consumption
+    REACTION CH2O(aq) + 4/3 NO2- <-> 2/3 N2(aq) + CO2(aq) + 5/3 H2O
+    RATE_CONSTANT 1.d-10
+    MONOD
+      SPECIES_NAME NO2-
+      HALF_SATURATION_CONSTANT 1.d-5
+    /
+    MONOD
+      SPECIES_NAME CH2O(aq)
+      HALF_SATURATION_CONSTANT 1.d-5
+    /
+    INHIBITION
+      SPECIES_NAME NO3-
+      TYPE THRESHOLD 1.d8
+      INHIBITION_CONSTANT -1.d-7
+    /
+    INHIBITION
+      SPECIES_NAME CH2O(aq)
+      TYPE THRESHOLD 1.d15
+      INHIBITION_CONSTANT 1.d-10
+    /
+    INHIBITION
+      SPECIES_NAME NO2-
+      TYPE THRESHOLD 1.d15
+      INHIBITION_CONSTANT 1.d-10
+    /
+  /
+  DATABASE ./chem_database.dat
+  LOG_FORMULATION
+  ACTIVITY_COEFFICIENTS TIMESTEP
+  OUTPUT
+    FREE_ION
+    ALL
   /
 END
-CONSTRAINT initial
-  CONCENTRATIONS
-    Tracer1 1.0e-20  T
 
+CONSTRAINT initial_constraint
+  CONCENTRATIONS
+    O2(aq)   3.125d-4 F
+    NO3-     1.613d-5 F
+    NO2-     1.d-10   F
+    N2(aq)   1.d-10   F
+    CH2O(aq) 3.667d-4 F
+    CO2(aq)  1.d-10   F
   /
 END
